--- a/src/main/webapp/WEB-INF/add.html
+++ b/src/main/webapp/WEB-INF/add.html
@@ -6,12 +6,13 @@
     <title>Add</title>
 </head>
 <body>
-<form  method="post" modelAttribute = "user">
-<label>Name</label>
-    <input type="text" name="Name"    />
-<label>name</label>
-    <input type="text" name ="name"  />
-<label>lastName</label>
-    <input type="text" name = "lastName"/>
+<form method="post" modelAttribute="user">
+    <label>Name</label>
+    <input type="text" name="name"/>
+    <label>Last name</label>
+    <input type="text" name="lastName"/>
+    <label>Email</label>
+    <input type="text" name="email"/>
+    <br/>
     <input type="submit" value="Add user">
 </form>
