--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:c="http://java.sun.com/xml/ns/javaee">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
 </head>
 <body>
-<h1>Users</h1>
-<table  width="30%" border="1" cellpadding="10" cellspacing="0">
+<h1>List of users</h1>
+<table width="30%" border="5" cellpadding="10" cellspacing="5">
 
     <tr>
         <th>id</th>
         <th>name</th>
         <th>last name</th>
         <th>email</th>
+        <th>operation</th>
     </tr>
     <tr>
-
         <td>
             <th:block th:each="lu : ${list_users}">
                 <p th:text="${lu.getId()}"></p>
             </th:block>
-
         </td>
         <td>
             <th:block th:each="lu : ${list_users}">
@@ -31,26 +29,24 @@
         </td>
         <td>
             <th:block th:each="lu : ${list_users}">
-                <p th:text="${lu.getLastName}"></p>
+                <p th:text="${lu.getLastName()}"></p>
             </th:block>
         </td>
         <td>
             <th:block th:each="lu : ${list_users}">
-                <p th:text="${lu.getEmail}"></p>
+                <p th:text="${lu.getEmail()}"></p>
             </th:block>
         </td>
         <td>
             <th:block th:each="lu : ${list_users}">
-                <a th:href= "@{/edit/{id}(id=${lu.getId()})}">edit</a>
-                <a th:href = "@{/delete/{id}(id=${lu.getId()})}">delete</a>
-                <p></p>
+                <a th:href="@{/edit/{id}(id=${lu.getId()})}">edit</a>
+                <a th:href="@{/delete/{id}(id=${lu.getId()})}">delete</a>
             </th:block>
         </td>
     </tr>
 </table>
 
-<h1>Add</h1>
+<h1>Add of users</h1>
 <a th:href="@{/add}">Add new user</a>
 </body>
 </html>
-<c:url value = "/add" var = "add"/>
