--- a/src/main/webapp/WEB-INF/add.html
+++ b/src/main/webapp/WEB-INF/add.html
@@ -9,10 +9,8 @@
 <form method="post" modelAttribute="user">
     <label>Name</label>
     <input type="text" name="name"/>
-    <label>Last name</label>
-    <input type="text" name="lastName"/>
-    <label>Email</label>
-    <input type="text" name="email"/>
+    <label>Password</label>
+    <input type="text" name="password"/>
     <br/>
     <input type="submit" value="Add user">
 </form>
