--- a/src/main/webapp/WEB-INF/edit.html
+++ b/src/main/webapp/WEB-INF/edit.html
@@ -10,10 +10,8 @@
     <input type="hidden" th:value="${user.getId()}" readonly>
     <label>Name</label>
     <input type="text" name="name" value="" th:value="${user.getName()}"/>
-    <label>Last name</label>
-    <input type="text" name="lastName" value="" th:value="${user.getLastName()}"/>
-    <label>Email</label>
-    <input type="text" name="email" value="" th:value="${user.getEmail()}"/>
+    <label>Password</label>
+    <input type="text" name="password" value="" th:value="${user.getPassword()}"/>
     <br/>
     <input type="submit" value="Submit">
 </form>
