--- a/src/main/webapp/WEB-INF/edit.html
+++ b/src/main/webapp/WEB-INF/edit.html
@@ -6,12 +6,15 @@
     <title>Edit</title>
 </head>
 <body>
-<form method="post">
+<form th:method="POST">
+<!--th:action="@{/admin}" modelattribute="user"-->
     <input type="hidden" th:value="${user.getId()}" readonly>
     <label>Name</label>
     <input type="text" name="name" value="" th:value="${user.getName()}"/>
     <label>Password</label>
     <input type="text" name="password" value="" th:value="${user.getPassword()}"/>
     <br/>
-    <input type="submit" value="Submit">
+    <input type="submit" value="edit">
 </form>
+</body>
+</html>
