--- a/src/main/webapp/WEB-INF/login.html
+++ b/src/main/webapp/WEB-INF/login.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <title>login</title>
 </head>
-<body>
-<h1>Please login</h1>
-<a th:href="@{/login}">log in</a>
 
-<form method="post" action="/login/process">
+<h1>Please login</h1>
+
+
+<form method="post" action="/login">
     <input name="username" placeholder="user name">
     <input name="password" placeholder="password">
-    <input type="submit">
+    <input type="submit" value="log in">
 </form>
 </body>
 </html>
